force-app/main/default/objects/Promotion_Product_Asc__c/Promotion_Product_Asc__c.object-meta.xml
<CustomObject>
    <label>Promotion-Product-Asc</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Promotion-Product-Asc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion-Product-Asc</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>