force-app/main/default/objects/Promotion_Product_Asc__c/fields/Parent_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Product Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>