force-app/main/default/objects/Promotion_Product_Asc__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>Produkt__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>