force-app/main/default/objects/Promotion_Product_Asc__c/fields/Produkt__c.field-meta.xml
<CustomField>
    <fullName>Produkt__c</fullName>
    <label>Produkt</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Promotion-Product-Asc</relationshipLabel>
    <relationshipName>Promotion_Product_Asc</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>