force-app/main/default/objects/Promotion_Product_Asc__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promotion</label>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipLabel>Promotion-Product-Asc</relationshipLabel>
    <relationshipName>Promotion_Product_Asc</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>