force-app/main/default/objects/Promotion_Product_Asc__c/fields/Promotion_Name__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Name__c</fullName>
    <formula>Promotion__r.Name</formula>
    <label>Promotion Name</label>
    <type>Text</type>
</CustomField>