force-app/main/default/objects/Promotion_Product_Asc__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF( Parent_Product_Id__c  &lt;&gt; &quot;&quot;, &quot;Service&quot;, &quot;Package&quot;)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>